# LocalPavTV_GUI

./: Cargo.toml  README.md
.github/workflows/: build-windows.yml
src/: main.rs
