[package]
name = "LocalPavTV_GUI" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["cikeZ00"]
edition = "2021"

[dependencies]
eframe = "0.31.0"          # or the latest version
egui = "0.31.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
confy = "0.5.0"

[dependencies.winapi]
version = "0.3"
features = [
    "winuser",
    "libloaderapi",
    "minwindef",
    "winerror",
    "shellscalingapi",
]